tests/good/misc/count.pas
program Count;

var i;
begin
    for i := 0 to 9 do
        WriteLn(i)
end.
