tests/bad/dispose-nonpointer.pas
program dispose_nonpointer;
var
  x: integer;
begin
  Dispose(x);
end.
